--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,8 @@
   }
 
   .material-symbols--header {
-    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+    font-size: 2.25rem;
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 36;
   }
 }
+
