--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,7 +33,12 @@
     font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
   }
 
-  .material-symbols--header {
+  .material-symbols--small {
+    font-size: 1rem;
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 16;
+  }
+
+  .material-symbols--large {
     font-size: 2.25rem;
     font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 36;
   }
