--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,5 +42,16 @@
     font-size: 2.25rem;
     font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 36;
   }
-}
 
+  .material-symbols--extra-large {
+    font-size: 4rem;
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 64;
+  }
+
+  .markdown {
+    @apply prose max-w-none font-sans prose-p:my-2
+      text-light-text-primary marker:text-base prose-headings:font-display prose-li:marker:font-display
+      prose-li:marker:text-light-primary dark:prose-invert
+      dark:text-dark-text-primary prose-li:dark:marker:text-dark-primary;
+  }
+}
